--- a/app/styles/app/popup.css
+++ b/app/styles/app/popup.css
@@ -148,19 +148,28 @@
   display: block;
   -webkit-animation-name: specialFadeOut;
   animation-name: specialFadeOut;
+  -webkit-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+
+.hidden {
+  display: none;
+  -webkit-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .visible {
   visibility: visible;
+  display: block !important;
 }
 
-.hidden {
-  display: none;
-  transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
 
 .menu ul li {
+  -webkit-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
+  -o-transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: opacity 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
@@ -543,21 +552,28 @@ h2 {
   width: 100%;
   font-size: 56px;
   font-weight: 300;
-  margin: 50px;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
 * {
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
 .flexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
 }
 
 .flexContainer .item {
   padding: 5px;
+  -webkit-box-flex: 1;
+  -ms-flex: 1 1 20%;
   flex: 1 1 20%;
 }
 
@@ -571,12 +587,14 @@ h2 {
   float: right;
 }
 
-.floatLeft{
+.floatLeft {
   float: left;
 }
 
 
-.loadingPacman{
+.loadingPacman {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
   width: fit-content;
   margin: auto;
 }
